5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4488/executions/1573_2896.log
== SUBMITION (2019-04-03 12:34:24) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python")

# Impressao de saidas
print()
-- EXECUTION TIME:
0.13316
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:

-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 12:34:26) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python")

# Impressao de saidas
print()
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:34:40) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Thalia")

# Impressao de saidas
print()
-- EXECUTION TIME:
0.128389
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:

-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:34:50) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Thalia")

# Impressao de saidas
print(Thalia)
-- EXECUTION TIME:
0.145741
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/2896/main.py", line 7, in <module>
    print(Thalia)
NameError: name 'Thalia' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 12:34:51) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Thalia")

# Impressao de saidas
print(Thalia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(Thalia)
NameError: name 'Thalia' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:34:53) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Thalia")

# Impressao de saidas
print(Thalia)
-- EXECUTION TIME:
0.166953
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/2896/main.py", line 7, in <module>
    print(Thalia)
NameError: name 'Thalia' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:36:13) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("20
52				")

# Impressao de saidas
print()
-- EXECUTION TIME:
0.206182
-- ERROR:
  File "/home/codebench/codes/1573/2896/main.py", line 4
    var = input("20
                  ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 12:36:13) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("20
52				")

# Impressao de saidas
print()
-- ERROR:
File "XXXX", line 4
    var = input("20
                  ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:37:41) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome:")

# Impressao de saidas
print()
-- EXECUTION TIME:
0.205231
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:

-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:38:47) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome:")

# Impressao de saidas
print()
-- EXECUTION TIME:
0.206754
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:

-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:38:48) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome:")

# Impressao de saidas
print()
-- EXECUTION TIME:
0.120096
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:

-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:38:48) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome:")

# Impressao de saidas
print()
-- EXECUTION TIME:
0.149652
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:

-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:38:48) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome:")

# Impressao de saidas
print()
-- EXECUTION TIME:
0.0926571
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1573/2896/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:38:59) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: Python")

# Impressao de saidas
print()
-- EXECUTION TIME:
0.135557
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:

-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:38:59) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: Python")

# Impressao de saidas
print()
-- EXECUTION TIME:
0.15461
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:

-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:39:00) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: Python")

# Impressao de saidas
print()
-- EXECUTION TIME:
0.093415
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:

-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:39:00) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: Python")

# Impressao de saidas
print()
-- EXECUTION TIME:
0.090472
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:

-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:39:20) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome:
				Python")

# Impressao de saidas
print()
-- EXECUTION TIME:
0.207499
-- ERROR:
  File "/home/codebench/codes/1573/2896/main.py", line 4
    var = input("Digite o nome:
                              ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 13:36:00) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome:")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 13:36:15) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome:")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.182545
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
